syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.yamalc.ytmp.grpc.thermo";
option java_outer_classname = "ThermoService";
option objc_class_prefix = "SPT";

package thermo;

enum ResultType {
    SUCCESS = 0;
    FAILURE = 1;
    NOT_EXISTS = 2;
}

service Thermo {
    rpc LatestBodyTemperature (UserIdRequest) returns (BodyTemperatureResponse) {}
    rpc LatestHealthCheck (UserIdRequest) returns (BodyTemperatureResponse) {}
    rpc RecentlyHealthCheck (UserIdRequest) returns (BodyTemperatureResponse) {}
    rpc NormalBodyTemperature (UserIdRequest) returns (BodyTemperatureResponse) {}
}

message UserIdRequest {
    ResultType result = 1;
    string id = 2;
}

message BodyTemperatureResponse {
    ResultType result = 1;
    string id = 2;
    float bodyTemperature = 3;
}
